--- a/soapui/pom.xml
+++ b/soapui/pom.xml
@@ -78,13 +78,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin-version}</version>
                 <configuration>
-                    <!--<systemProperties>
-                        &lt;!&ndash; Only log errors and only log to the console to decrease the log verbosity &ndash;&gt;
+                    <systemProperties>
+                        <!-- Only log errors and only log to the console to decrease the log verbosity -->
                         <soapui.log4j.config>${project.build.testOutputDirectory}/config/soapui-test-log4j.xml
                         </soapui.log4j.config>
-                        &lt;!&ndash; run tests with home set to folder test-classes inside target to isolate tests from whatever user is executing the build. &ndash;&gt;
+                        <!-- run tests with home set to folder test-classes inside target to isolate tests from whatever user is executing the build. -->
                         <user.home>target/test-classes</user.home>
-                    </systemProperties>-->
+                    </systemProperties>
                 </configuration>
             </plugin>
 
@@ -186,11 +186,11 @@
 
         <!-- Logging -->
 
-        <!--<dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
@@ -695,6 +695,13 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
+        </dependency>
+
+        <!--oracle-->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
         </dependency>
 
     </dependencies>
