--- a/soapui/src/main/resources/com.founder.soapui/database.properties
+++ b/soapui/src/main/resources/com.founder.soapui/database.properties
@@ -1,4 +1,11 @@
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/fcr-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=UTC&useSSL=false
-jdbc.username=root
-jdbc.password=root
+#mysql
+#jdbc.driver=com.mysql.cj.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/fcr-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=UTC&useSSL=false
+#jdbc.username=root
+#jdbc.password=root
+
+#oracle
+jdbc.driver=oracle.jdbc.OracleDriver
+jdbc.url=jdbc:oracle:thin:@192.168.1.25:1521:FCR51
+jdbc.username=FCR51HOST
+jdbc.password=FCR51HOST
